--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-dotenv==1.4.2
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.7.2
 jmespath==0.10.0
+psycopg2-binary==2.9.1
 PyJWT==2.1.0
 python-dateutil==2.8.2
 pytz==2021.1
