--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-cors-headers==3.7.0
 django-dotenv==1.4.2
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.7.2
+gunicorn==20.1.0
 jmespath==0.10.0
 Pillow==8.3.1
 psycopg2-binary==2.9.1
